# coachy

./: .gitignore  CLAUDE.md  PRIVACY.md  README.md  config.yaml  config.yaml.example  priorities.md  priorities.md.example  pyproject.toml  scrubber_prompt.md.example  setup.py  setup_app.py  test_basic.py  test_blocks.py  test_phase2.py  test_phase3.py  test_phase4.py  test_spatial.py
coachy/: __init__.py  app_paths.py  cli.py  config.py  errors.py  keychain.py  menubar.py  permissions.py  settings_window.py
coachy/capture/: __init__.py  daemon.py  daemon_thread.py  screenshot.py  window.py  windows.py
coachy/coach/: __init__.py  blocks.py  digest.py  llm.py  personas.py  priorities.py  privacy_scrubber.py
coachy/process/: __init__.py  classifier.py  diff.py  ocr.py  pipeline.py  spatial.py
coachy/storage/: __init__.py  db.py  models.py
personas/: davidad.md  grove.md  huang.md  nielsen.md
scripts/: build_dmg.sh
